saddah-infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saddah
  labels:
    name: saddah
    app.kubernetes.io/part-of: saddah
    app.kubernetes.io/managed-by: kustomize
